--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 # Miki Aso
 
-Master student in Seismology<br>
-<br>
-1-711 Department of Earth and Planetary Science<br>
-Graduate School of Science, The University of Tokyo<br>
-miki.aso@eps.s.u-tokyo.ac.jp<br>
-+81 03-5841-4652<br>
+Master student in Seismology  
+　　
+1-711 Department of Earth and Planetary Science  
+Graduate School of Science, The University of Tokyo  
+miki.aso@eps.s.u-tokyo.ac.jp  
++81 03-5841-4652  
